[workspace]
resolver = "2"
members = ["after", "before"]

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
teloxide = "0.15.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "sqlite",
] }
dotenvy = "0.15.7"
rand = "0.8"
